fix(WeatherCard): prevent vertical shrinking and temperature overflow
- Refactor WeatherCard component jsx to get rid of inline url style and div tag and replace with img tag.
- Update css styles.
- Adjust max-width of Header and WeatherCard components.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   width: 100%;
   margin: 0;
+  max-width: 1360px;
 }
 
 .header__container {
