--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -1,16 +1,25 @@
-.weather__card {
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height: 80px;
-  margin-top: 28px;
-  display: flex;
-  align-items: center;
+.weather-card {
+  position: relative;
+  max-width: 1360px;
 }
 
-.weather__temp {
+.weather-card__temp {
   color: rgba(255, 255, 255, 1);
+  position: absolute;
+  top: 48px;
+  left: 16px;
   font-size: 36px;
   line-height: 1.1;
   font-weight: 700;
-  margin: 0 0 0 16px;
+  margin: 0;
+}
+
+.weather-card__image {
+  object-fit: cover;
+  object-position: right top;
+  width: 100%;
+  height: 80px;
+  border-radius: 12px;
+  margin-top: 28px;
+  box-sizing: border-box;
 }
